<resources>
    <string name="app_name">HackTheValleyIV</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_title">Welcome to [Title]</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_title_button">Login</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_create_act">CreateActActivity</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_act_continue">Confirm</string>
    <string name="title_activity_dashboard_event">Map</string>
    <string name="preferences">Preferences</string>
</resources>
