<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AccountCreateActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:padding="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/createActName"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/createActEmail"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:layout_below="@+id/createActName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/createActUsername"
                android:layout_marginTop="10dp"
                android:hint="@string/login_hint"
                android:layout_below="@+id/createActEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/createActPassword"
                android:layout_marginTop="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_below="@+id/createActUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/createActPasswordConfirm"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_below="@id/createActPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/createActPreferences"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/createActPasswordConfirm"
                android:hint="@string/preferences"
                android:inputType="text"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/makeActButton"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/createActPreferences"
                android:text="@string/create_act_continue"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>